2015-04-02  Giuseppe Scrivano  <gscrivan@redhat.com>

	* src/roach.h (roach_context_s): Add Comment.

	* src/roach.h (roach_context_s): Add root_pid.  Rename pid to
	current_pid.

	* src/roach.c (roach_ctx_get_pid): New function.
	* src/arch/linux_generic.c (roach_set_sc): Use roach_ctx_get_pid
	instead of accessing ctx->pid everywhere.

	* src/roach.c (roach_wait): Simplify some code.

	* TODO: TLS won't be useful, as there is only one process running,
	make it clear.

	* src/arch/linux_generic.c (roach_syscall_inhibit): Remove magic
	number and use __NR_getpid.

	* src/roach.c (roach_wait): Pass the pid of the stopped process to
	the hook function.
	* src/roach.h: Add argument "pid" to roach_syscall_inhibit.
	* src/arch/linux_generic.c (roach_syscall_inhibit): Add argument "pid".
	* src/plugins/fail_mem/fail_mem.c (fail_mem): Likewise.

2015-04-01  Jose E. Marchesi  <jemarch@gnu.org>

	* TODO: Renamed from TODO.org
	Formatting fixed.

2015-04-01  Giuseppe Scrivano  <gscrivan@redhat.com>

	* TODO.org: Add new file.

2015-04-01  Jose E. Marchesi  <jemarch@gnu.org>

	* bootstrap.conf (gnulib_modules): Add module readdir.
	(gnulib_modules): Likewise.

2015-04-01  Jose E. Marchesi  <jemarch@gnu.org>

	* src/cockroach.c (main): Call plugins_load_dir.
	(cockroach_print_help): Help string updated to reflect the new
	semantics of --plugin and --load-plugins.
	(main): Updated to handle ADD_PLUGIN_ARG and PLUGIN_ARG command
	line options.
	(ADD_PLUGIN_ARG): New enum.
	(PLUGIN_ARG): Renamed from PLUGIN_ADD_ARG.
	(main): Print an error message and exit with an error status if
	the loading of a plugin fails.

	* src/plugins.c (plugins_load_dir): New function.

	* src/Makefile.am: Include Makefile.am.common.
	(AM_CPPFLAGS): Define PLUGINDIR.

2015-04-01  Jose E. Marchesi  <jemarch@gnu.org>

	* Makefile.am.common: New file.
	(plugindir): Defined.

	* src/plugins/inhibit/Makefile.am: Include Makefile.am.common.
	(plugin_LTLIBRARIES): Renamed from lib_LTLIBRARIES.
